fixed spacing of region name for smaller devices

--- a/css/query.css
+++ b/css/query.css
@@ -33,6 +33,7 @@
     font-size: 45%;
   }
   h1 {
+    margin-top: 1.8rem;
     text-align: center;
     margin-bottom: 2rem;
   }
@@ -100,6 +101,7 @@
     font-size: 1.8rem;
   }
   h3 {
+    margin-top: 1.8rem;
     font-size: 2.2rem;
   }
 }
